--- a/FractalPainter/fractalPainter.csproj
+++ b/FractalPainter/fractalPainter.csproj
@@ -99,21 +99,19 @@
     </Compile>
     <Compile Include="App\Program.cs" />
     <Compile Include="App\SettingsManager.cs" />
-    <Compile Include="Infrastructure\Palette.cs" />
-    <Compile Include="Infrastructure\IImageDirectoryProvider.cs" />
-    <Compile Include="Infrastructure\IImageSettingsProvider.cs" />
-    <Compile Include="Infrastructure\INeed.cs" />
-    <Compile Include="Infrastructure\DependencyInjector.cs" />
-    <Compile Include="Infrastructure\FileBlobStorage.cs" />
-    <Compile Include="Infrastructure\IBlobStorage.cs" />
-    <Compile Include="Infrastructure\IObjectSerializer.cs" />
-    <Compile Include="Infrastructure\XmlObjectSerializer.cs" />
-    <Compile Include="Infrastructure\SettingsForm.cs" />
-    <Compile Include="Infrastructure\IImageHolder.cs" />
-    <Compile Include="Infrastructure\ImageSettings.cs" />
-    <Compile Include="Infrastructure\IUiAction.cs" />
+    <Compile Include="App\Infrastructure\IDragonPainterFactory.cs" />
+    <Compile Include="App\Infrastructure\Palette.cs" />
+    <Compile Include="App\Infrastructure\IImageDirectoryProvider.cs" />
+    <Compile Include="App\Infrastructure\FileBlobStorage.cs" />
+    <Compile Include="App\Infrastructure\IBlobStorage.cs" />
+    <Compile Include="App\Infrastructure\IObjectSerializer.cs" />
+    <Compile Include="App\Infrastructure\XmlObjectSerializer.cs" />
+    <Compile Include="App\Infrastructure\SettingsForm.cs" />
+    <Compile Include="App\Infrastructure\IImageHolder.cs" />
+    <Compile Include="App\Infrastructure\ImageSettings.cs" />
+    <Compile Include="App\Infrastructure\IUiAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Infrastructure\UiActionExtensions.cs" />
+    <Compile Include="App\Infrastructure\UiActionExtensions.cs" />
     <EmbeddedResource Include="App\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
