--- a/TagsCloudApp/App.config
+++ b/TagsCloudApp/App.config
@@ -3,4 +3,24 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+      
+  <configSections>
+    <sectionGroup name="tagsCloudGroup">
+      <section 
+        name="tagsCloud" 
+        type="TagsCloudApp.Config.TagsCloudSection" 
+        allowLocation="true" 
+        allowDefinition="Everywhere"
+      />
+    </sectionGroup>
+  </configSections>
+  
+  <tagsCloudGroup>
+    <tagsCloud>
+      <font name="Arial" minsize="10" maxsize="50"/>
+      <color background="483d8b" tag="ff8c00"/>
+      <imageSize width="800" height="800"/>
+      <centerPoint x="400" y="400"/>
+    </tagsCloud>
+  </tagsCloudGroup>
 </configuration>
