--- a/TagsCloudApp/packages.config
+++ b/TagsCloudApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.2.1" targetFramework="net452" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="FluentAssert" version="1.0.0.11" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
 </packages>
